# streamvb

./: Cargo.toml  README.md
benches/: bench.rs  encode.rs
examples/: basic.rs
src/: common.rs  lib.rs  simd.rs
src/aarch64/: decode.rs  encode.rs  mod.rs
src/safe/: mod.rs
src/scalar/: decode.rs  encode.rs  mod.rs
src/tables/: len.rs  mod.rs  shuffle.rs
src/x86_64/: decode.rs  encode.rs
