[package]
name = "streamvb"
version = "0.1.0"
edition = "2018"

[features]
default = []
# default = ["aarch64-simd"]
aarch64-simd = []  # nightly only

[dependencies]
multiversion = "0.6"

[dev-dependencies]
criterion = { version = "0.3", features=["html_reports"] }
rand = "0.8"

[[bench]]
name = "encode"
harness = false
